XRDDEV-904 Initial configuration / decoupling
